solved the issue of timestamp going out of the box

--- a/frontend/src/styles/message.css
+++ b/frontend/src/styles/message.css
@@ -14,6 +14,12 @@
     overflow-wrap: break-word;
 }
 
+.messageBox::after{
+    content:"";
+    display: block;
+    clear:both;
+}
+
 .sentMessage{
     background-color: rgb(181, 249, 207);
     display: block;
